# inheir.ai

./: README.md  compose.yaml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/inheir_backend/helpers/: auth.py
config/nginx/: nginx.conf
frontend/: Dockerfile  biome.json  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/home/: layout.tsx  page.tsx
frontend/src/app/home/case/[id]/: page.tsx
frontend/src/app/home/new/case/: page.tsx
frontend/src/app/home/report/: page.tsx
frontend/src/app/home/report/dashboard/: page.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/components/: AppContainer.tsx  AuthForm.tsx  Card.tsx  Cases.tsx  Chatbot.tsx  CreateCaseForm.tsx  DocumentSummary.tsx
frontend/src/lib/validators/: schema.ts  types.ts
functions/ChatBotFunction/: __init__.py  function.json  function_app.py  requirements.txt
functions/ChatBotFunction/config/: __init__.py  database.py  environment.py
functions/ChatBotFunction/helpers/: filename.py  search.py  serializer.py  service.py  singleton.py
functions/ChatBotFunction/services/: rag.py  storage.py
functions/DeleteOldEntries/: function_app.py  requirements.txt
